--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
     <title>The Hunter Valley</title>
 </head>
 <body>
-    <h1>
-        Hello World
-    </h1>
+    <div class="container">
+        <header>
+            <h3>.TRAVEL.</h3>
+            <h1>The Hunter Valley</h1>
+            <h2>Australia's Oldest Wine Region</h2>
+            <a href="#more">Learn More</a>
+        </header>
+        </div>
+        <footer></footer>
+    </div>
 </body>
 </html>
