--- a/index.html
+++ b/index.html
@@ -19,8 +19,47 @@
             <h2>Australia's Oldest Wine Region</h2>
             <a href="#more">Learn More</a>
         </header>
-        </div>
-        <footer></footer>
+        <footer>
+            <section class="grid">
+                <div>
+                    <h3>Additional info</h3>
+                    <ul>
+                        <li>
+                            <a href="https://www.newcastleairport.com.au/" target="_blank">
+                                Newcastle Aiport
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://maps.app.goo.gl/tY6SsQepNoT7mrjR9" target="_blank">
+                                Map of The Hunter Valley
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.com.au/hunter-region-australia/stays" target="_blank">
+                                Airbnb
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>About me</h3>
+                    <p>
+                        Hi! my name is Charmaine and 
+                        I'm very fond of the Hunter Valley. I created this 
+                        page as a part of my course and to demonstrate my responsive 
+                        design skills.
+                    </p>
+                </div>
+                <div>
+                    <h3>About this website</h3>
+                    <p>
+                        This page was built with HTML and CSS. To learn more check out the
+                        <a href="https://github.com/ctndeveloperstudent/hunter-valley-project" target="_blank">github</a>
+                        repository for this project.
+                    </p>
+                </div>
+            </section>
+        </footer>
     </div>
 </body>
 </html>
