added why the hunter valley section and made image responsive

--- a/index.html
+++ b/index.html
@@ -19,8 +19,35 @@
             <h2>Australia's Oldest Wine Region</h2>
             <a href="#more">Learn More</a>
         </header>
+        <main>
+            <section class="grid grid-2-columns">
+                <div>
+                    <img 
+                        src="images/grapes.jpg" 
+                        alt="Grapes in vineyard"
+                        class="img-responsive"
+                    >
+                </div>
+                <div>
+                    <h2>Why the Hunter Valley?</h2>
+                    <h3>Hunter Valley, the Heart of Wine and Wonder</h3>
+                    <p>
+                        The Hunter Valley, in New South Wales, Australia, is a viticultural gem known for its world-class wineries and
+                        landscapes. As one of the country's oldest wine regions, it boasts a rich winemaking heritage since the early 19th
+                        century. With over 150 wineries, producing renowned Semillon and Shiraz, visitors can enjoy tastings, tours, and gourmet
+                        dining amid rolling hills and lush vineyards, making it a top destination for wine lovers and history buffs.
+                    </p>
+                    <p>   
+                        Beyond its wine culture, the Hunter Valley offers diverse activities. Its natural beauty shines in parks like Watagans
+                        and Wollemi, perfect for hiking and wildlife spotting. The Hunter Valley Gardens provide a peaceful retreat, while
+                        charming towns offer boutique shopping and artisanal food. Whether exploring the vibrant food scene or relaxing in 
+                        a luxury spa, the Hunter Valley's natural splendor and cultural richness ensure an unforgettable experience.
+                    </p>
+                </div>
+            </section>
+        </main>
         <footer>
-            <section class="grid">
+            <section class="grid grid-3-columns-with-first-narrow">
                 <div>
                     <h3>Additional info</h3>
                     <ul>
