added winery section and cards html and css

--- a/index.html
+++ b/index.html
@@ -45,6 +45,84 @@
                     </p>
                 </div>
             </section>
+            <section class="secondary">
+                <h2 class="text-center">Wineries</h2>
+                <h3 class="text-center">The Best Wineries in the Hunter Valley</h3>
+                <div class="grid grid-3-columns">
+                    
+                    <div class="card">
+                        <div class="card-header">
+                            <img src="images\audrey-wilkinson.jpg" alt="Audrey Wilkinson Winery" class="img-responsive">
+                        </div>
+                        <div class="card-body">
+                            <h4>Audrey Wilkinson</h4>
+                            <p>
+                                Experience the breathtaking beauty of the Hunter Valley from atop the Audrey Wilkinson hill, 
+                                where each sip of wine tells a story of passion and craftsmanship.
+                            </p>
+                            <h5>Address</h5>
+                            <p>750 De Beyers Rd, Pokolbin NSW 2320</p>
+                            <h5>What I like about it</h5>
+                            <p>
+                                What captivates me about Audrey Wilkinson Vineyard is not only their stunning panoramic views but also their dedication
+                                to producing handcrafted wines that showcase the region's unique terroir.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="https://www.audreywilkinson.com.au/" target="_blank" class="btn">Learn More</a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-header">
+                            <img src="images\brokenwood.jpg" alt="Brokenwood Wines" class="img-responsive">
+                        </div>
+                        <div class="card-body">
+                            <h4>Brokenwood Wines</h4>
+                            <p>
+                                Indulge in the epitome of Hunter Valley elegance at Brokenwood Wines, 
+                                where a blend of tradition and innovation results
+                                in wines that enchant the palate and linger in the memory.
+                            </p>
+                            <h5>Address</h5>
+                            <p>401-427 McDonalds Rd, Pokolbin NSW 2320</p>
+                            <h5>What I like about it</h5>
+                            <p>
+                                What sets Brokenwood apart for me is their diverse range of wines, from their iconic Semillon to their acclaimed Shiraz,
+                                each one reflecting the essence of the Hunter Valley with finesse and sophistication.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="https://www.brokenwood.com.au/" target="_blank" class="btn">Learn More</a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-header">
+                            <img src="images\Tyrrells-wines.jpg" alt="Tyrrells's Wines Winery" class="img-responsive">
+                        </div>
+                        <div class="card-body">
+                            <h4>Tyrrell's Wines</h4>
+                            <p>
+                                Discover a legacy of excellence at Tyrrell's Wines, where five generations of winemaking
+                                expertise converge to produce award-winning wines nestled amidst picturesque vineyard.
+                            </p>
+                            <h5>Address</h5>
+                            <p>1838 Broke Rd, Pokolbin NSW 2320</p>
+                            <h5>What I like about it</h5>
+                            <p>
+                                What I like about Tyrrell's Wines is their commitment to preserving traditional
+                                winemaking methods while also embracing innovation. This resultes in wines of unparalleled
+                                quality and distinction for people now and in the future to enjoy.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="https://www.tyrrells.com.au/" target="_blank" class="btn">Learn More</a>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
         </main>
         <footer>
             <section class="grid grid-3-columns-with-first-narrow">
