activated learn more button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                     >
                 </div>
                 <div>
-                    <h2>Why the Hunter Valley?</h2>
+                    <a name="more">
+                        <h2>Why the Hunter Valley?</h2>
+                    </a>
                     <h3>Hunter Valley, the Heart of Wine and Wonder</h3>
                     <p>
                         The Hunter Valley, in New South Wales, Australia, is a viticultural gem known for its world-class wineries and
